--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
         </dependency>
         <!-- Jaxb -->
         <dependency>
-            <groupId>javax.xml</groupId>
+            <groupId>javax.xml.bind</groupId>
             <artifactId>jaxb-api</artifactId>
             <version>2.1</version>
         </dependency>
